[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/player.png" type="Texture" id=1]
[ext_resource path="res://Code/Player.gd" type="Script" id=2]
[ext_resource path="res://Code/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Code/playerFSM.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 3 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
process_priority = 5
collision_mask = 2
script = ExtResource( 2 )
levels = [ null, null ]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 38, -41 )
current = true
smoothing_enabled = true
drag_margin_top = 0.75
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Sprite" type="Sprite" parent="."]
process_priority = 5
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="wall_raycast" type="Node2D" parent="."]

[node name="left_raycast" type="RayCast2D" parent="wall_raycast"]
process_priority = 5
position = Vector2( -2.1, 0 )
rotation = -3.14159
scale = Vector2( 0.39, 0.3 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
collide_with_areas = true

[node name="right_raycast" type="RayCast2D" parent="wall_raycast"]
position = Vector2( 2.1, 0 )
scale = Vector2( 0.39, 0.3 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3
collide_with_areas = true

[node name="StateHolder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Wall Slide Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallSlideSticky" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Imunity_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimeToDeath" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true
[connection signal="grounded_changed" from="." to="Camera2D" method="_on_Player_grounded_changed"]
[connection signal="timeout" from="WallSlideSticky" to="StateHolder" method="_on_WallSlideSticky_timeout"]
